syntax = "proto3";

package protobuf.store.service;

option go_package = "store/proto";

enum ItemType {
  CREDENTIALS = 0;
  TEXT_DATA = 1;
  BINARY_DATA = 2;
  CREDIT_CARD = 3;
}

message ItemInfo {
  string id = 1; // guid of item
  string checksum = 3; // checksum of item data
  string metadata = 4;
}

message GetItemsListRequest {}

message GetItemsListResponse {
  repeated ItemInfo itemsInfo = 1; // items info list
  int32 count = 2; // size of items info list
}

message UploadItemRequest {
  string id = 1; // guid of item
  bytes chunk = 3; // payload
  string metadata = 4;
}

message UploadItemResponse {
  string id = 1; // guid of item
  uint32 size = 2; // size of received data
}

message DownloadItemRequest {
  string guid = 1; // guid of item
}

message DownloadItemResponse {
  bytes payload = 1;
}

service StoreService {
  rpc GetItemsList(GetItemsListRequest) returns(GetItemsListResponse);
  rpc UploadItem(stream UploadItemRequest) returns(UploadItemResponse);
  rpc DownloadItem(DownloadItemRequest) returns(stream DownloadItemResponse);
}